xen-orchestra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xen-orchestra
  labels:
    app: xen-orchestra
spec:
  selector:
    app: xen-orchestra
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
